--- a/src/styles/components/LevelUpModal.module.css
+++ b/src/styles/components/LevelUpModal.module.css
@@ -25,7 +25,7 @@
     font-size:0.75rem;
     font-weight: 600;
     color: var(--blue);
-    background: url('icons/levelUp.svg') no-repeat center;
+    background: url('icons/level-up.svg') no-repeat center;
     background-size: contain; 
 }
 
